--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
                         <h5 class="card-title">Make An Appointment</h5>
                         <p class="card-text">To make an appointment either call us at our medical hotline or send us an
                             email.<br>
-                            <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 011557761111</strong>
-                            <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 26910605</strong>
-                            <br><i class="fas fa-phone-alt"> </i> <strong>(+2) 01099333370</strong>
-                            <br><i class="fas fa-envelope"> </i> <strong>egybrit@egybrit.net</strong>
+                            <br><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" /><strong> (+2)
+                                011557761111</strong>
+                            <br><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" /><strong> (+2)
+                                26910605</strong>
+                            <br><img src="https://img.icons8.com/ios-filled/24/000000/ringing-phone.png" /><strong> (+2)
+                                01099333370</strong>
+                            <br><img src="https://img.icons8.com/ios-filled/24/000000/email.png" /><strong>
+                                egybrit@egybrit.net</strong>
                         </p>
                     </div>
                 </div>
@@ -104,14 +108,13 @@
         </div>
     </div>
 
-    <div class="jumbotron doctors-background">
+    <div class="jumbotron" style="background:white;">
         <div class="container">
             <h1 class="display-4 jumbotron-title" style="padding-bottom: 2%;">Our Doctors</h1>
             <div class="card-group">
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -120,8 +123,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -130,8 +132,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -140,8 +141,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -150,8 +150,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -160,8 +159,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -170,8 +168,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -180,8 +177,7 @@
                 </div>
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png"
-                            class="card-img-top doctor-image" alt="...">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
@@ -193,27 +189,45 @@
     </div>
 
 
-    <footer class="container py-5" style="margin-bottom: -1.5%; margin-top: -1.5%;">
-        <div class="row">
-          <div class="col-md footer-content">
-            <img src="assets/images/logo.png" class="footer-image">
-          </div>
-          <div class="col-md">
-            <h5>Navigation</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Home</a></li>
-              <li><a class="text-muted" href="#">Services</a></li>
-              <li><a class="text-muted" href="#">About</a></li>
-              <li><a class="text-muted" href="#">Contact Us</a></li>
-            </ul>
-          </div>
-        </div>
-      </footer>
-    
-      <div class="footerfooter" style="text-align: center; background-color: #f5f5f5;">
-        <span class="text-muted">Copyright &copy; 2020 All Rights Reserved</span>
-      </div>
-    
+    <footer class="fluid-container py-5 footer-border" style="margin-bottom: -1.5%; margin-top: -1.5%;">
+        <center class="container">
+            <div class="row">
+                <div class="col-md footer-content">
+                    <img src="assets/images/logo.png" class="footer-image">
+                </div>
+                <div class="col-md">
+                    <h5>Contact</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted"><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" />
+                                (+2) 011557761111</a>
+                        </li>
+                        <li><a class="text-muted"><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" />
+                                (+2)
+                                26910605</a></li>
+                        <li><a class="text-muted"><img
+                                    src="https://img.icons8.com/ios-filled/24/000000/ringing-phone.png" /> (+2)
+                                01099333370</a></li>
+                        <li><a class="text-muted"><img src="https://img.icons8.com/ios-filled/24/000000/email.png" />
+                                egybrit@egybrit.net</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h5>Navigation</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#">Home</a></li>
+                        <li><a class="text-muted" href="#">Services</a></li>
+                        <li><a class="text-muted" href="#">About</a></li>
+                        <li><a class="text-muted" href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </center>
+    </footer>
+
+    <div class="footerfooter" style="text-align: center;">
+        <span class="text-muted footerfooter-text">Copyright &copy; 2020 All Rights Reserved</span>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
