--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <link rel="stylesheet" type="text/css" href="./css/home.css">
     <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="./css/footer.css">
+    <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
 
     <title>EGY BRIT</title>
@@ -23,7 +25,7 @@
         <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/images/logo.png" width="175" height="85" alt="EGY BRIT">
+                    <img src="./assets/images/logo.png" width="205" height="100" alt="EGY BRIT">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -57,51 +59,51 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
             </p>
             <p class="lead">
-                <a class="btn btn-danger btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
             </p>
         </div>
 
         <div class="container description-cards">
             <div class="card-deck">
-                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
-                    <img src="./assets/icons/icons8-stethoscope-150.png" class="card-img-top-2" alt="...">
-                    <div class="card-body">
+                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #43B3E5">
+                    <i class="fas fas-card fa-stethoscope card-img-top-2"></i>
+                    <div class="card-body card-descriptions">
                         <h5 class="card-title">What We Do</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor
                             incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                        <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+                        <a class="btn btn-info btn-lg" href="#" role="button">Learn More</a>
                     </div>
                 </div>
-                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
-                    <img src="./assets/icons/icons8-ringing-phone-150.png" class="card-img-top-2" alt="...">
-                    <div class="card-body">
+                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #0284CF;">
+                    <i class="fas fas-card fa-phone-alt card-img-top-2"></i>
+                    <div class="card-body card-descriptions">
                         <h5 class="card-title">Make An Appointment</h5>
                         <p class="card-text">To make an appointment either call us at our medical hotline or send us an
                             email.<br>
-                            <br><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" /><strong> (+2)
+                            <br><i class="fas fa-mobile-alt"></i><strong> (+2)
                                 011557761111</strong>
-                            <br><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" /><strong> (+2)
+                            <br><i class="fas fa-mobile-alt"></i><strong> (+2)
                                 26910605</strong>
-                            <br><img src="https://img.icons8.com/ios-filled/24/000000/ringing-phone.png" /><strong> (+2)
-                                01099333370</strong>
-                            <br><img src="https://img.icons8.com/ios-filled/24/000000/email.png" /><strong>
+                            <br><i class="fas fa-at"></i><strong>
                                 egybrit@egybrit.net</strong>
                         </p>
                     </div>
                 </div>
-                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color:#fafafa;">
-                    <img src="./assets/icons/icons8-clock-384.png" class="card-img-top-2" alt="...">
-                    <div class="card-body">
+                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color:#3156A4">
+                    <i class="fas fas-card fa-clock card-img-top-2"></i>
+                    <div class="card-body card-descriptions">
                         <h5 class="card-title">Opening Hours</h5>
                         <p class="card-text">Sunday - Saturday
                             <br>8:00 AM - 10:00 PM
                             <br>
-                            <br><i class="fas fa-map-signs"></i> 4th Floor, 18 Thawra St., QNB Building, Helopolis,
+                            <br>
+                            <i class="fas fa-map-signs" style="font-size: 20px;"></i> 4th Floor, 18 Thawra St., QNB
+                            Building, Helopolis,
                             Cairo,
                             Egypt.
                         </p>
-                        <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+                        <a class="btn btn-info btn-lg" href="#" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +113,7 @@
     <div class="jumbotron" style="background:white;">
         <div class="container">
             <h1 class="display-4 jumbotron-title" style="padding-bottom: 2%;">Our Doctors</h1>
-            <div class="card-group">
+            <div class="card-group doctor-cards">
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
