--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor
                             incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                        <a class="btn btn-info btn-lg" href="#" role="button">Learn More</a>
+                        <a class="btn btn-info btn-lg" href="#" role="button" style="margin-top: 15%;">Learn More</a>
                     </div>
                 </div>
                 <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #0284CF;">
@@ -81,12 +81,15 @@
                         <h5 class="card-title">Make An Appointment</h5>
                         <p class="card-text">To make an appointment either call us at our medical hotline or send us an
                             email.<br>
-                            <br><i class="fas fa-mobile-alt"></i><strong> (+2)
+                            <br><i class="fas fa-phone-alt"></i><strong> (+2)
                                 011557761111</strong>
-                            <br><i class="fas fa-mobile-alt"></i><strong> (+2)
+                            <br><i class="fas fa-phone-alt"></i><strong> (+2)
                                 26910605</strong>
-                            <br><i class="fas fa-at"></i><strong>
+                            <br><i class="fas fa-envelope"></i></i><strong>
                                 egybrit@egybrit.net</strong>
+
+                            <br><br><i class="fas fa-first-aid"></i><strong> Emergency Hotline:<br>(+2)
+                                01099333370</strong>
                         </p>
                     </div>
                 </div>
@@ -103,7 +106,7 @@
                             Cairo,
                             Egypt.
                         </p>
-                        <a class="btn btn-info btn-lg" href="#" role="button">Learn More</a>
+                        <a class="btn btn-info btn-lg" href="#" role="button" style="margin-top: 15%;">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +115,7 @@
 
     <div class="jumbotron" style="background:white;">
         <div class="container">
-            <h1 class="display-4 jumbotron-title" style="padding-bottom: 2%;">Our Doctors</h1>
+            <h1 class="display-4 jumbotron-title" style="padding-bottom: 2%;">Our Team</h1>
             <div class="card-group doctor-cards">
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
@@ -200,16 +203,15 @@
                 <div class="col-md">
                     <h5>Contact</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted"><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" />
+                        <li><a class="text-muted"><i class="fas fa-phone-alt"></i>
                                 (+2) 011557761111</a>
                         </li>
-                        <li><a class="text-muted"><img src="https://img.icons8.com/ios-filled/24/000000/phone.png" />
+                        <li><a class="text-muted"><i class="fas fa-phone-alt"></i>
                                 (+2)
                                 26910605</a></li>
-                        <li><a class="text-muted"><img
-                                    src="https://img.icons8.com/ios-filled/24/000000/ringing-phone.png" /> (+2)
-                                01099333370</a></li>
-                        <li><a class="text-muted"><img src="https://img.icons8.com/ios-filled/24/000000/email.png" />
+                        <li><a class="text-muted"><i class="fas fa-first-aid"></i> (+2)
+                                01099333370</li>
+                        <li><a class="text-muted"><i class="fas fa-envelope"></i>
                                 egybrit@egybrit.net</a></li>
                     </ul>
                 </div>
