Our Team Section

--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
 
     <div class="jumbotron" style="background:white;">
         <div class="container">
-            <h1 class="display-4 jumbotron-title" style="padding-bottom: 2%;">Our Team</h1>
+            <h1 class="display-4 jumbotron-title" style="color: #B32E36;">Our Team</h1>
+            <hr>
+            <h3 class="display-4 jumbotron-subtitle">Doctors</h3>
             <div class="card-group doctor-cards">
                 <div class="doctors-col col mb-4">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -130,7 +132,7 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -139,7 +141,7 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -148,7 +150,19 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h3 class="display-4 jumbotron-subtitle">Pharmacists</h3>
+            <div class="card-group doctor-cards">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -157,7 +171,7 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -166,7 +180,7 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -175,7 +189,19 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h3 class="display-4 jumbotron-subtitle">Nurses</h3>
+            <div class="card-group doctor-cards">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -184,7 +210,64 @@
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Full Name</h5>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h3 class="display-4 jumbotron-subtitle">Admins</h3>
+            <div class="card-group doctor-cards">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
