--- a/index.html
+++ b/index.html
@@ -113,9 +113,60 @@
         </div>
     </div>
 
-    <div class="jumbotron" style="background:white;">
+    <div class="fluid-jumbotron" style="background:#FFFFFF; height: 100%;">
+        <div style="padding-top: 1%; padding-bottom: 2%;">
+            <div class="container">
+                <h1 class="display-4 jumbotron-title" style="color: #2F4785; padding-top: 4%; margin-bottom: 2%;">Testimonials</h1>
+                <hr style="padding-bottom: 2%;">
+            </div>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner container">
+                    <div class="carousel-item active">
+                        <div class="card testimonial-card shadow p-3 mb-5 bg-white rounded">
+                            <div class="card-body">
+                                <h5 class="card-title">John doe</h5>
+                                <p class="card-text">
+
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci. Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card testimonial-card shadow p-3 mb-5 bg-white rounded">
+                            <div class="card-body">
+                                <h5 class="card-title">John Doe</h5>
+                                <p class="card-text">
+
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci. Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card testimonial-card shadow p-3 mb-5 bg-white rounded">
+                            <div class="card-body">
+                                <h5 class="card-title">John Doe</h5>
+                                <p class="card-text">
+
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci. Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="jumbotron" style="background:#F9F9FF">
         <div class="container">
-            <h1 class="display-4 jumbotron-title" style="color: #B32E36;">Our Team</h1>
+            <h1 class="display-4 jumbotron-title" style="color: #2F4785;">Our Team</h1>
             <hr>
             <h3 class="display-4 jumbotron-subtitle">Doctors</h3>
             <div class="card-group doctor-cards">
@@ -275,7 +326,6 @@
             </div>
         </div>
     </div>
-
 
     <footer class="fluid-container py-5 footer-border" style="margin-bottom: -1.5%; margin-top: -1.5%;">
         <center class="container">
