--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
             </p>
             <p class="lead">
-                <a class="btn btn-info btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             </p>
         </div>
 
@@ -72,7 +72,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor
                             incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                        <a class="btn btn-info btn-lg" href="#" role="button" style="margin-top: 15%;">Learn More</a>
+                        <a class="btn btn-primary btn-lg" href="#" role="button" style="margin-top: 20%;">Learn More</a>
                     </div>
                 </div>
                 <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #0284CF;">
@@ -106,7 +106,7 @@
                             Cairo,
                             Egypt.
                         </p>
-                        <a class="btn btn-info btn-lg" href="#" role="button" style="margin-top: 15%;">Learn More</a>
+                        <a class="btn btn-primary btn-lg" href="#" role="button" style="margin-top: 20%;">Learn More</a>
                     </div>
                 </div>
             </div>
