--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
         <div style="padding-top: 1%; padding-bottom: 2%;">
             <div class="container">
                 <h1 class="display-4 jumbotron-title" style="color: #2F4785; padding-top: 4%; margin-bottom: 2%;">Testimonials</h1>
-                <hr style="padding-bottom: 2%;">
+                <hr>
             </div>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner container">
+                <div class="carousel-inner container testimonial-card">
                     <div class="carousel-item active">
-                        <div class="card testimonial-card shadow p-3 mb-5 bg-white rounded">
+                        <div class="card center-card shadow p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <h5 class="card-title">John doe</h5>
                                 <p class="card-text">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="card testimonial-card shadow p-3 mb-5 bg-white rounded">
+                        <div class="card center-card shadow p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <h5 class="card-title">John Doe</h5>
                                 <p class="card-text">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="card testimonial-card shadow p-3 mb-5 bg-white rounded">
+                        <div class="card center-card shadow p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <h5 class="card-title">John Doe</h5>
                                 <p class="card-text">
@@ -170,7 +170,7 @@
             <hr>
             <h3 class="display-4 jumbotron-subtitle">Doctors</h3>
             <div class="card-group doctor-cards">
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -188,16 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col col mb-4">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -209,7 +200,7 @@
             </div>
             <h3 class="display-4 jumbotron-subtitle">Pharmacists</h3>
             <div class="card-group doctor-cards">
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -218,25 +209,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col col mb-4">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col col mb-4">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -248,7 +221,7 @@
             </div>
             <h3 class="display-4 jumbotron-subtitle">Nurses</h3>
             <div class="card-group doctor-cards">
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -257,7 +230,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -266,16 +239,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col col mb-4">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -287,7 +251,7 @@
             </div>
             <h3 class="display-4 jumbotron-subtitle">Admins</h3>
             <div class="card-group doctor-cards">
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
@@ -296,25 +260,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="doctors-col col mb-4">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col col mb-4">
-                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
-                        <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
-                            <p class="card-text"><small class="text-muted">Job Name</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="doctors-col col mb-4">
+                <div class="doctors-col doctor-card">
                     <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
                         <img src="./assets/images/avatar.png" class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
