--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     <div class="fluid-jumbotron" style="background:#FFFFFF; height: 100%;">
         <div style="padding-top: 1%; padding-bottom: 2%;">
             <div class="container">
-                <h1 class="display-4 jumbotron-title" style="color: #2F4785; padding-top: 4%; margin-bottom: 2%;">Testimonials</h1>
+                <h1 class="display-4 jumbotron-title" style="color: #2F4785; padding-top: 4%; margin-bottom: 2%;">
+                    Testimonials</h1>
                 <hr>
             </div>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -124,30 +125,45 @@
                     <div class="carousel-item active">
                         <div class="card center-card shadow p-3 mb-5 bg-white rounded">
                             <div class="card-body">
+                                <img src="./assets/images/avatar.png" class="rounded-circle" alt="Cinque Terre"
+                                    width="75" height="75">
                                 <h5 class="card-title">John doe</h5>
                                 <p class="card-text">
 
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci. Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim
+                                    suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci.
+                                    Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget
+                                    odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card center-card shadow p-3 mb-5 bg-white rounded">
                             <div class="card-body">
-                                <h5 class="card-title">John Doe</h5>
+                                <img src="./assets/images/avatar.png" class="rounded-circle" alt="Cinque Terre"
+                                    width="75" height="75">
+                                <h5 class="card-title">John doe</h5>
                                 <p class="card-text">
 
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci. Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim
+                                    suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci.
+                                    Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget
+                                    odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card center-card shadow p-3 mb-5 bg-white rounded">
                             <div class="card-body">
-                                <h5 class="card-title">John Doe</h5>
+                                <img src="./assets/images/avatar.png" class="rounded-circle" alt="Cinque Terre"
+                                    width="75" height="75">
+                                <h5 class="card-title">John doe</h5>
                                 <p class="card-text">
 
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci. Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius, enim
+                                    suscipit venenatis iaculis, velit odio iaculis magna, et faucibus diam odio ut orci.
+                                    Vestibulum ac est luctus, faucibus lectus sed, commodo tellus. Fusce id risus eget
+                                    odio convallis congue. Vestibulum fermentum ante in tellus placerat tempus.</p>
                             </div>
                         </div>
                     </div>
@@ -273,11 +289,26 @@
         </div>
     </div>
 
-    <footer class="fluid-container py-5 footer-border" style="margin-bottom: -1.5%; margin-top: -1.5%;">
+    <div class="fluid-jumbotron map-jumbotron" style="background:#FFFFFF">
+        <!--<div class="container">
+            <div class="map-card">
+                <h1 class="map-title">Our Location</h1>
+            </div>
+        </div>-->
+        <div class="mapouter">
+            <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=18%20Thawra%20St.%2C%20Helopolis%2C%20Cairo%2C%20Egypt&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                    href="https://www.embedgooglemap.net/blog/private-internet-access-coupon/"></a></div>
+        </div>
+    </div>
+
+    <footer class="fluid-container py-5 footer-border" style="margin-bottom: -1.5%;">
         <center class="container">
             <div class="row">
                 <div class="col-md footer-content">
-                    <img src="assets/images/logo.png" class="footer-image">
+                    <img src="assets/images/logo.png" class="footer-image"><br>
+                    <small class="d-block mb-3 text-muted" style="padding-top: 1%;">.</small>
                 </div>
                 <div class="col-md">
                     <h5>Contact</h5>
@@ -292,6 +323,13 @@
                                 01099333370</li>
                         <li><a class="text-muted"><i class="fas fa-envelope"></i>
                                 egybrit@egybrit.net</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h5>Location</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#"> 4th Floor, 18 Thawra St.,<br>QNB Building, Helopolis,<br>Cairo,
+                        Egypt</a></li>
                     </ul>
                 </div>
                 <div class="col-md">
